Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13190

I/O can fail with -EBADF if fresh client has no connection to OST

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      otherwise it's possible to get -EBADF:

      • client sends open|create intent before a connection to OST is established
      • MDS replies back without UPDATE bit in LDLM lock, but with the layout
        (MDS doesn't send OBD_MD_FLMODEASIZE and back
      • client's cl_default_mds_easize is still 0
      • client sends getattr intent with 0-size buffer for EA
      • MDS replies with no layout and LAYOUT bit
      • client sets local layout to EMPTY
      • all subsequent I/O fails with -EBADF
      
      

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: